after improve form design

--- a/src/Component/Inventory/Inventory.css
+++ b/src/Component/Inventory/Inventory.css
@@ -8,3 +8,19 @@
     border-radius: 5px;
     margin-left: 5px;
 }
+
+.addItem-btn a{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
+.inventory-title{
+    display: flex;
+    justify-content: center;
+    background-color:black;
+    color: azure;
+    border-radius: 50%;
+    
+}
