--- a/src/Component/Login/Register/Register.css
+++ b/src/Component/Login/Register/Register.css
@@ -1,9 +1,15 @@
 .register-form{
-    margin: 0 auto;
-    width: 50%;
+   margin: 0 auto;
+   margin-top: 30px;
+    width: 20%;
+    height: auto;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
 }
 .register-form input:not([type=checkbox]){
     display: block;
+   
     width: 100%;
     height: 40px;
     border-radius: 5px;
