--- a/src/Component/Home/Products/Products.css
+++ b/src/Component/Home/Products/Products.css
@@ -2,12 +2,29 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
-    margin-bottom: 400px;
-    margin-top: 200px;
+    margin-bottom: 40px;
+    margin-top: 20px;
 }
 
+.products-title{
+    text-align: center;
+    margin: 10px;
+    border-bottom: 3px solid rgb(105, 88, 88);
+    
+}
 
+.inv-btn a {
+  
+    text-decoration: none;
+    color: black;
+}
 
+.inv-btn{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(27, 210, 238);
+    
+}
 @media only screen and (max-width:576px) {
     .products-container{
         grid-template-columns: repeat(1, 1fr);
@@ -19,3 +36,4 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
